openshift/Spec/WebGatos/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: webgatos
  name: webgatos
  namespace: curso-contenedores
spec:
  port:
    targetPort: webgatos-port
  to:
    kind: Service
    name: webgatos
    weight: 100
  wildcardPolicy: None
